{
  "version": 4,
  "terraform_version": "1.14.3",
  "serial": 204,
  "lineage": "d68ab08d-573d-60fe-c773-5b9b8e51bc05",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e3f020055c8cf7ea",
            "arn": "arn:aws:ec2:ap-northeast-2:739961805636:elastic-ip/eipalloc-0e3f020055c8cf7ea",
            "association_id": "eipassoc-05380d8b2701d6587",
            "domain": "vpc",
            "id": "eipalloc-0e3f020055c8cf7ea",
            "network_border_group": "ap-northeast-2",
            "network_interface": "eni-022c0aa8abafd6aec",
            "private_dns": "ip-10-0-1-96.ap-northeast-2.compute.internal",
            "private_ip": "10.0.1.96",
            "public_dns": "ec2-3-35-145-244.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "3.35.145.244",
            "public_ipv4_pool": "amazon",
            "region": "ap-northeast-2"
          },
          "identity_schema_version": 0,
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:739961805636:internet-gateway/igw-0bb438357b524b5b5",
            "id": "igw-0bb438357b524b5b5",
            "owner_id": "739961805636",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "terraform-01-igw"
            },
            "tags_all": {
              "Name": "terraform-01-igw"
            },
            "vpc_id": "vpc-0a678f671d33e8772"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e3f020055c8cf7ea",
            "association_id": "eipassoc-05380d8b2701d6587",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-04656a524669311d5",
            "network_interface_id": "eni-022c0aa8abafd6aec",
            "private_ip": "10.0.1.96",
            "public_ip": "3.35.145.244",
            "region": "ap-northeast-2",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-08eb267f068399a21",
            "tags": {
              "Name": "terraform-01-natgw"
            },
            "tags_all": {
              "Name": "terraform-01-natgw"
            },
            "vpc_id": "vpc-0a678f671d33e8772"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_subnet.pub_2a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "pub_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0bb438357b524b5b5",
            "id": "r-rtb-0c4f76e9ffb5ce0761080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-0c4f76e9ffb5ce076",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "739961805636",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "ap-northeast-2",
            "route_table_id": "rtb-0c4f76e9ffb5ce076"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.pub",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "pvt_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-09a6ff3db1a54eb221080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-04656a524669311d5",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-09a6ff3db1a54eb22",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "739961805636",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "ap-northeast-2",
            "route_table_id": "rtb-09a6ff3db1a54eb22"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.pvt",
            "aws_subnet.pub_2a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:739961805636:route-table/rtb-0c4f76e9ffb5ce076",
            "id": "rtb-0c4f76e9ffb5ce076",
            "owner_id": "739961805636",
            "propagating_vgws": [],
            "region": "ap-northeast-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0bb438357b524b5b5",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "terraform-01-rtb-pub"
            },
            "tags_all": {
              "Name": "terraform-01-rtb-pub"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a678f671d33e8772"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "739961805636",
            "id": "rtb-0c4f76e9ffb5ce076",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pvt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:739961805636:route-table/rtb-09a6ff3db1a54eb22",
            "id": "rtb-09a6ff3db1a54eb22",
            "owner_id": "739961805636",
            "propagating_vgws": [],
            "region": "ap-northeast-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-04656a524669311d5",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "terraform-01-rtb-pvt"
            },
            "tags_all": {
              "Name": "terraform-01-rtb-pvt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a678f671d33e8772"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "739961805636",
            "id": "rtb-09a6ff3db1a54eb22",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pub_2a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01c62df950275cfff",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-0c4f76e9ffb5ce076",
            "subnet_id": "subnet-08eb267f068399a21"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.pub",
            "aws_subnet.pub_2a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pub_2c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-080a5a97f2e069a9a",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-0c4f76e9ffb5ce076",
            "subnet_id": "subnet-01a23a955971da11d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.pub",
            "aws_subnet.pub_2c",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pvt_2a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0babdf6d60d3f311e",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-09a6ff3db1a54eb22",
            "subnet_id": "subnet-071d0cd56c24b4442"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.pvt",
            "aws_subnet.pvt_2a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pvt_2c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03ff1c06a35d37229",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-09a6ff3db1a54eb22",
            "subnet_id": "subnet-0cb457df4e07d2bf8"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.pvt",
            "aws_subnet.pvt_2c",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub_2a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:739961805636:subnet/subnet-08eb267f068399a21",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08eb267f068399a21",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "739961805636",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "terraform-01-pub-2a"
            },
            "tags_all": {
              "Name": "terraform-01-pub-2a"
            },
            "vpc_id": "vpc-0a678f671d33e8772"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "739961805636",
            "id": "subnet-08eb267f068399a21",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub_2c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:739961805636:subnet/subnet-01a23a955971da11d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01a23a955971da11d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "739961805636",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "terraform-01-pub-2c"
            },
            "tags_all": {
              "Name": "terraform-01-pub-2c"
            },
            "vpc_id": "vpc-0a678f671d33e8772"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "739961805636",
            "id": "subnet-01a23a955971da11d",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pvt_2a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:739961805636:subnet/subnet-071d0cd56c24b4442",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-071d0cd56c24b4442",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "739961805636",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "terraform-01-pvt-2a"
            },
            "tags_all": {
              "Name": "terraform-01-pvt-2a"
            },
            "vpc_id": "vpc-0a678f671d33e8772"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "739961805636",
            "id": "subnet-071d0cd56c24b4442",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pvt_2c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:739961805636:subnet/subnet-0cb457df4e07d2bf8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cb457df4e07d2bf8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "739961805636",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "terraform-01-pvt-2c"
            },
            "tags_all": {
              "Name": "terraform-01-pvt-2c"
            },
            "vpc_id": "vpc-0a678f671d33e8772"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "739961805636",
            "id": "subnet-0cb457df4e07d2bf8",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:739961805636:vpc/vpc-0a678f671d33e8772",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0164110e2ca783a13",
            "default_route_table_id": "rtb-0f1f120f75cf1d5eb",
            "default_security_group_id": "sg-0f50c60dd1a58f8d2",
            "dhcp_options_id": "dopt-028d1a46ec037e7ec",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0a678f671d33e8772",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f1f120f75cf1d5eb",
            "owner_id": "739961805636",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "terraform-01"
            },
            "tags_all": {
              "Name": "terraform-01"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "739961805636",
            "id": "vpc-0a678f671d33e8772",
            "region": "ap-northeast-2"
          }
        }
      ]
    }
  ]
}